src/components/network/vpc/template.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Create VPC Network",
  "Parameters": {
    "Name": {
      "Description": "The name tag for this Vpc",
      "Type": "String"
    },
    "CidrBlock": {
      "Description": "The CIDR Block for this VPC",
      "Type": "String"
    }
  },
  "Resources": {
    "PortfolioVPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "EnableDnsHostnames": "true",
        "EnableDnsSupport": "true",
        "CidrBlock": {
          "Ref": "CidrBlock"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Ref": "Name"
            }
          }
        ]
      }
    },
    "PublicSubnetSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Portfolio subnet security group",
        "VpcId": {
          "Ref": "PortfolioVPC"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "SecurityGroupEgress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "Portfolio subnet security group"
          }
        ]
      }
    },
    "Outputs": {
      "PortfolioVPC": {
        "Description": "ID of the VPC",
        "Export": {
          "Name": "portfolio-vpc"
        },
        "Value": {
          "Ref": "PortfolioVPC"
        }
      },
      "PublicSecurityGroup": {
        "Description": "Portfolio subnet security group",
        "Export": {
          "Name": "portfolio-security-group"
        },
        "Value": {
          "Ref": "PublicSubnetSecurityGroup"
        }
      }
    }
  }
}
